--- a/src/styles/Navabar.module.css
+++ b/src/styles/Navabar.module.css
@@ -1,5 +1,12 @@
 /* css for big screen navbar */
 
+.navbar {
+  position: sticky;
+  top: 0px;
+  width: 100%;
+  z-index: 3;
+}
+
 /* just hide respnsive menu */
 .navbar_responsive {
   display: none;
@@ -122,7 +129,7 @@ input.search {
   font-size: 24px;
 }
 
-@media screen and (max-width: 1160px) {
+@media screen and (max-width: 1230px) {
   /* hide big screen menu */
   .navbar_wrapper {
     display: none;
@@ -176,21 +183,34 @@ input.search {
   cursor: pointer;
 }
 
-ul.navbar_links {
+.navbar_link_content {
+  display: grid;
+  grid-template-columns: minmax(280px, 1.6fr) 1fr;
   position: absolute;
   top: 100%;
   left: -100%;
-  display: flex;
-  min-width: 100%;
-  width: 50%;
+  min-width: 0%;
   height: 100vh;
+  z-index: 181;
+  opacity: 0;
+  transition: all 0.5s ease;
+}
+
+.navbar_closer {
+  background: rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(8px);
+}
+
+ul.navbar_links {
+  position: relative;
+  height: 93vh;
+  min-height: 93vh !important;
+  display: flex;
   background: #fff;
   list-style: none;
   flex-direction: column;
   overflow-x: hidden;
   overflow-y: auto;
-  z-index: 181;
-  transition: all 0.5s ease-in-out;
 }
 
 .navbar_responsive li.navbar_link {
@@ -213,4 +233,25 @@ ul.navbar_links {
   font-size: 18px;
   color: #000000;
   cursor: pointer;
+}
+
+.social_links {
+  position: sticky;
+  bottom: 0%;
+  padding: 16px;
+  background: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(12px);
+  width: 100%;
+}
+
+.social_link {
+  margin-left: 6px;
+  padding: 12px;
+  font-size: 22px;
+  color: #000000;
+  transition: all 0.5s ease-in-out;
+}
+
+.social_link:hover {
+  color: #e80071;
 }
