--- a/src/styles/Navabar.module.css
+++ b/src/styles/Navabar.module.css
@@ -236,7 +236,7 @@ ul.navbar_links {
 }
 
 .social_links {
-  position: sticky;
+  position: fixed;
   bottom: 0%;
   padding: 16px;
   background: rgba(255, 255, 255, 0.2);
