--- a/src/styles/Cart.module.css
+++ b/src/styles/Cart.module.css
@@ -136,6 +136,7 @@ p.product_desc {
   flex-direction: column;
   gap: 1rem;
   border-top: 4px solid #dadada;
+  margin-bottom: 60px;
 }
 
 .cart_item_details {
