--- a/src/styles/Cart.module.css
+++ b/src/styles/Cart.module.css
@@ -3,14 +3,14 @@
   top: 0;
   opacity: 0;
   left: -100%;
-  width: 0%;
+  width: 100%;
   height: 100vh;
   overflow-x: hidden;
   overflow-y: hidden;
   display: grid;
   grid-template-columns: 1.2fr minmax(400px, 0.8fr);
   z-index: 189;
-  transition: all 0.8s ease-in;
+  transition: all 0.4s ease;
 }
 
 .cart_close_btn {
@@ -174,7 +174,7 @@ p.product_desc {
   background: #fff;
 }
 
-@media (max-width: 468px) {
+@media (max-width: 568px) {
   .cart {
     grid-template-columns: 1.2fr minmax(100%, 0.8fr);
   }
