--- a/src/styles/MugsItemCard.module.css
+++ b/src/styles/MugsItemCard.module.css
@@ -1,4 +1,4 @@
-.tshirt_item_card {
+.mugs_item_card {
   display: flex;
   flex-direction: column;
   /* border: 2px solid rgba(0, 0, 0, 0.1); */
@@ -6,18 +6,18 @@
   overflow: hidden;
 }
 
-.tshirt_img_wrapper {
+.mugs_img_wrapper {
   /* display: none; */
   max-height: 280px;
   height: 280px;
   overflow: hidden;
 }
 
-.tshirt_img_wrapper img {
+.mugs_img_wrapper img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: top;
+  object-position: center;
 }
 
 .slider {
@@ -28,7 +28,7 @@
   height: 100% !important;
 }
 
-.tshirt_info_wrapper {
+.mugs_info_wrapper {
   padding-inline: 12px;
   padding-block: 16px;
 }
@@ -42,7 +42,7 @@
   text-transform: uppercase;
 }
 
-.tshirt_desc {
+.mugs_desc {
   margin-bottom: 12px;
   font-size: 14px;
   font-weight: 500;
@@ -50,7 +50,7 @@
   text-align: center;
 }
 
-.tshirt_price {
+.mugs_price {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -77,7 +77,7 @@
   color: #388e3c;
 }
 
-.tshirt_size {
+.mugs_size {
   text-align: center;
 }
 
