--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,6 +26,23 @@ img {
 }
 
 .swiper-pagination {
-  color: #000000 !important;
+  color: #000 !important;
   font-weight: 500;
+  background: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(12px);
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  background: rgba(255, 255, 255, 0.6);
+  backdrop-filter: blur(12px);
+  width: 30px !important;
+  height: 30px !important;
+  border-radius: 50%;
+}
+
+.swiper-button-next:after,
+.swiper-button-prev:after {
+  font-size: 16px !important;
+  color: #000000 !important;
 }
