--- a/src/styles/Navabar.module.css
+++ b/src/styles/Navabar.module.css
@@ -7,6 +7,20 @@
   z-index: 3;
 }
 
+/* Navabar.module.css */
+
+.visible {
+  opacity: 1;
+  transform: translateY(0);
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.hidden {
+  opacity: 0;
+  transform: translateY(-100%);
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
 /* just hide respnsive menu */
 .navbar_responsive {
   display: none;
@@ -211,7 +225,7 @@ ul.navbar_links {
   list-style: none;
   flex-direction: column;
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: scroll;
 }
 
 .navbar_responsive li.navbar_link {
@@ -237,7 +251,7 @@ ul.navbar_links {
 }
 
 .social_links {
-  position: fixed;
+  position: sticky;
   bottom: 0%;
   padding: 16px;
   background: rgba(255, 255, 255, 0.2);
