--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,9 @@
   text-decoration: none;
   font-family: "inter", sans-serif;
 }
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   position: relative;
